--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,6 @@
 @import "tailwindcss";
 @plugin "@midudev/tailwind-animations";
 @custom-variant dark (&:where(.dark, .dark *));
+@import "flowbite/src/themes/default";
+@plugin "flowbite/plugin";
+@source "../../node_modules/flowbite";
