--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -62,7 +62,7 @@ const PROJECTS = [
         description: 'Desarrollé una tienda online completa utilizando Laravel como framework backend. El proyecto incluye funcionalidades esenciales de comercio electrónico, enfocadas en rendimiento, seguridad y una experiencia de usuario fluida.',
         link: '#',
         github: '#',
-        image:['/banner1.jpg', '/retrato.JPG', '/screenshot.png'],
+        image:['/banner1.jpg', '/screenshot.png', '/banner1.jpg'],
         tags: [TAGS.Laravel, TAGS.Bootstrap,TAGS.SQL]
     },
     {
