--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,84 +16,53 @@ import Proyects from '../components/Proyects.astro';
 import AboutMeIcon from '../components/icons/AboutMeIcon.astro';
 import Download from '../components/icons/Download.astro';
 import TitleSection from '../components/TitleSection.astro';
+import Hero from '../components/Hero.astro';
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
+<Layout
+	title="Mikel Otavalo - Desarrollador Web"
+	description="Desarrollador Web y Técnico de sistemas informáticos con un año de experiencia. De Granada, España. Especializado en crear aplicaciones web y posicionamiento web."
+	lang="es">
 	<main class="px-4">
-		<SectionContainer class="animate-blurred-fade-in duration-500 lg:h-[100dvh] lg:flex lg:flex-col justify-center section py-16 md:py-36 scroll-m-20 w-full mx-auto container">
-			<div>
-				<div class="flex gap-4 mb-4">
-					<h1 class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white">
-						Hola, Soy Mikel Otavalo
-					</h1>
-					<a href="https://www.linkedin.com/in/mikel-otavalo/" target="_blank" rel="noopener" class="flex items-center transition md:justify-center md:hover:scale-105">
-						<Badge>Disponible para trabajar</Badge>
-					</a>
-				</div>
-				
-				
-				<p class="text-pretty mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-blue-600 [&>strong]:font-semibold dark:text-gray-300">
-					<strong>Desarrollador Web</strong> y <strong>Técnico de sistemas informáticos</strong> con un año de experiencia. 
-					De Granada, España. Especializado en crear aplicaciones web y posicionamiento web.
-				</p>
-				
-			</div>
-			
-			
-			<nav class="flex gap-2 mt-8 flex-wrap">
-				<SocialPill href="https://www.linkedin.com/in/mikel-otavalo/">
-					<LinkedIn class="size-6"/>LinkedIn
-				</SocialPill>
-				<SocialPill href="https://github.com/MikelAnderson">
-					<Github class="size-6"/>GitHub
-				</SocialPill>
-				<SocialPill href="mailto:otavalomikel@gmail.com">
-					<Mail class="size-6"/>Contáctame
-				</SocialPill>
-				<SocialPill href="/CV_MikelOtavalo_DesarrolladorWeb.pdf">
-					<Download class="size-6"/>Descargar CV
-				</SocialPill>
-			</nav>
+		<SectionContainer class="animate-blurred-fade-in duration-500 h-[100dvh] flex flex-col justify-center section py-16 md:py-36 scroll-m-20 w-full mx-auto container">
+			<Hero></Hero>
 		</SectionContainer>
-		<div class="space-y-24">
-			<SectionContainer id="experiencia" class="animate-slide-in-bottom">
-				<TitleSection>
-					<Suitcase class="size-8"/>Experiencia laboral
-				</TitleSection>				
-				<Experience/>
-			</SectionContainer>
-			
-			<SectionContainer id="proyectos" class="animate-fade-in ">
-				<h2 class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white undefined">
-					<Code class="size-8"/>Proyectos
-				</h2>
-				<Proyects/>
-			</SectionContainer>
-			 
-			<SectionContainer id="sobre-mi">
-				<h2 class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white undefined">
-					<AboutMeIcon/>Sobre mí
-				</h2>
-				<article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
-					<div class="[&>p]:mb-4 [&>p>strong]:text-blue-600 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"> 
-						<p>Me llamo Mikel, tengo 25 años y soy de Granada, España con padres de origen Ecuatoriano. Estudié <strong>Administración de Sistemas Informáticos en Red</strong> y 
-							luego me pasé al mundo de la programación estudiando un <strong>Grado Superior de Desarrollo de aplicaciones Web.</strong>Desde entonces disfruto mucho 
-							creando experiencias web para los usuarios.
-						</p>
-						<p>Entre mis éxitos en el grado destaco la <strong>creación de una tienda online desde cero</strong> usando un framework de PHP 
-							llamado <strong><em class="italic">Laravel</em></strong>. Además aprendí mucho sobre tecnologías modernas como React, Angular, Springboot, Tailwind, etc,
-							que me ayudaron a mejorar mis habilidades como desarrollador.
-						</p>
-						<p>Cuento en experiencia en el desarrollo de aplicaciones web, así como en la <strong>optimización</strong> y <strong>posicionamiento</strong> mediante el uso de <strong><em class="italic">CMS</em></strong>, ya 
-							que tengo conocimientos en <strong><em class="italic">SEO</em></strong> que me permiten ofrecer un servicio integral.
-						</p>
-					</div> 
-					<img width="200" height="200" src="/retrato.JPG" alt="Mikel Otavalo" class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
-				</article>
-			</SectionContainer>
-		</div>		
-		
+			<div class="space-y-24">
+				<SectionContainer id="experiencia" class="animate-slide-in-bottom">
+					<TitleSection>
+						<Suitcase class="size-8"/>Experiencia laboral
+					</TitleSection>				
+					<Experience/>
+				</SectionContainer>
+				<SectionContainer id="proyectos" class="animate-fade-in ">
+					<TitleSection>
+						<Code class="size-7" />Proyectos
+					</TitleSection>
+					<Proyects/>
+				</SectionContainer>
+				<SectionContainer id="sobre-mi">
+					<TitleSection>
+						<AboutMeIcon class="size-8" />Sobre mí
+					</TitleSection>
+					<article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
+						<div class="[&>p]:mb-4 [&>p>strong]:text-blue-600 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"> 
+							<p>Me llamo Mikel, tengo 25 años y soy de Granada, España con padres de origen Ecuatoriano. Estudié <strong>Administración de Sistemas Informáticos en Red</strong> y 
+								luego me pasé al mundo de la programación estudiando un <strong>Grado Superior de Desarrollo de aplicaciones Web.</strong>Desde entonces disfruto mucho 
+								creando experiencias web para los usuarios.
+							</p>
+							<p>Entre mis éxitos en el grado destaco la <strong>creación de una tienda online desde cero</strong> usando un framework de PHP 
+								llamado <strong><em class="italic">Laravel</em></strong>. Además aprendí mucho sobre tecnologías modernas como React, Angular, Springboot, Tailwind, etc,
+								que me ayudaron a mejorar mis habilidades como desarrollador.
+							</p>
+							<p>Cuento en experiencia en el desarrollo de aplicaciones web, así como en la <strong>optimización</strong> y <strong>posicionamiento</strong> mediante el uso de <strong><em class="italic">CMS</em></strong>, ya 
+								que tengo conocimientos en <strong><em class="italic">SEO</em></strong> que me permiten ofrecer un servicio integral.
+							</p>
+						</div> 
+						<img width="200" height="200" src="/retrato.JPG" alt="Mikel Otavalo" class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
+					</article>
+				</SectionContainer>
+			</div>		
 	</main>
 </Layout>
