--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Hero from '../components/Hero.astro';
 	description="Desarrollador Web y Técnico de sistemas informáticos con un año de experiencia. De Granada, España. Especializado en crear aplicaciones web y posicionamiento web."
 	lang="es">
 	<main class="px-4">
-		<SectionContainer class="animate-blurred-fade-in duration-500 h-[100dvh] flex flex-col justify-center section py-16 md:py-36 scroll-m-20 w-full mx-auto container">
+		<SectionContainer class="animate-blurred-fade-in duration-500 section h-[100vh] content-center scroll-m-20">
 			<Hero></Hero>
 		</SectionContainer>
 			<div class="space-y-24">
