--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -10,7 +10,7 @@ export interface Props {
 const { title,company, description, link, date } = Astro.props;
 ---
 
-<li class="animate-slide-in-bottom">
+<li class="animate-fade-in-right timeline-view animate-range-entry">
   <div
     class="relative mx-12 pb-12 grid before:absolute before:left-[-35px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4]"
   >
@@ -35,7 +35,7 @@ const { title,company, description, link, date } = Astro.props;
         <a
         href={link}
         role="link"
-        class="inline-flex items-center text-lg font-medium text-blue-600 hover:text-blue-900 dark:text-yellow-200 dark:hover:text-yellow-300 "
+        class="inline-flex items-center text-lg font-medium text-yellow-500 hover:text-yellow-700  dark:text-yellow-200 dark:hover:text-yellow-300 "
       >
         Sitio web de la empresa <svg
           xmlns="http://www.w3.org/2000/svg"
