--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@ import Mail from "./icons/Mail.astro";
 import Download from "./icons/Download.astro";
 ---
 
-<div class="w-full ">
+<div class="max-w-2xl">
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
