REsponsive del hero y efectos basicos agregados a la web.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,8 +23,8 @@ const navItems = [
 ]
 
 ---
-<header class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2">
-    <nav class="flex px-3 text-sm font-medium shadow-lg backdrop-filter backdrop-blur-lg bg-white/50 dark:bg-gray-800/0 border-gray-200 dark:border-gray-700 rounded-full text-gray-600 dark:text-gray-200 justify-center items-center">
+  <header class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2 animate-slide-in-top">
+    <nav class="flex px-3 text-sm font-medium shadow-lg backdrop-filter backdrop-blur-2xl bg-white/50 dark:bg-gray-800/0 border-gray-200 dark:border-gray-700 rounded-full text-gray-600 dark:text-gray-200 justify-center items-center ">
         {
         navItems.map((link) => (
         <a
