--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,12 +7,16 @@ import Mail from "./icons/Mail.astro";
 import Download from "./icons/Download.astro";
 ---
 
-<div class="max-w-2xl">
-  <div class="flex gap-4 mb-4">
+<div
+  class="section h-[100dvh] content-center items-center scroll-m-20 w-full mx-auto container lg:max-w-5xl md:max-w-2xl animate-blurred-fade-in"
+
+>
+  <div class="w-full flex flex-col md:flex-row justify-between items-center gap-4 animate-slide-in-top">
+    <div class="gap-4 mb-4">
+      <div class="flex gap-4 mb-4 lg:hidden">
     <img
       class="rounded-full shadow-lg size-16"
       src="/retrato.JPG"
-      alt="Mikel Otavalo"
     />
     <a
       href="https://linkedin.com/in/midudev"
@@ -23,30 +27,54 @@ import Download from "./icons/Download.astro";
       <Badge>Disponible para trabajar</Badge>
     </a>
   </div>
-  <h1
-    class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
-  >
-    Hola, Soy Mikel Otavalo
-  </h1>
-  <p
-    class="text-pretty mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-blue-600 [&>strong]:font-semibold dark:text-gray-300"
-  >
-    +1 año de experiencia. <strong>Desarrollador Web Junior y Técnico en sistemas informáticos en Red</strong
-    > de Granada, España. Especializado en el desarrollo de aplicaciones web
-    únicas e interactivas.
-  </p>
-  <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="https://www.linkedin.com/in/mikel-otavalo/">
-					<LinkedIn class="size-6"/>LinkedIn
-				</SocialPill>
-				<SocialPill href="https://github.com/MikelAnderson">
-					<Github class="size-6"/>GitHub
-				</SocialPill>
-				<SocialPill href="mailto:otavalomikel@gmail.com">
-					<Mail class="size-6"/>Contáctame
-				</SocialPill>
-				<SocialPill href="/CV_MikelOtavalo_DesarrolladorWeb.pdf">
-					<Download class="size-6"/>Descargar CV
-				</SocialPill>
-  </nav>
+      <div class="w-full flex flex-row items-center gap-4">
+        <h1
+          class=" text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
+        >
+          Hola, Soy Mikel
+        </h1>
+        <span
+          ><a
+            href="https://linkedin.com/in/mikel-otavalo"
+            target="_blank"
+            rel="noopener"
+            class="flex items-center transition md:justify-center md:hover:scale-105"
+          >
+            <Badge class="hidden lg:block">Disponible para trabajar</Badge>
+          </a></span
+        >
+      </div>
+
+      <p
+        class=" text-pretty mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-blue-600 [&>strong]:font-semibold dark:text-gray-300"
+      >
+        +1 año de experiencia. <strong
+          >Desarrollador Web Junior y Técnico en sistemas informáticos en Red</strong
+        > de Granada, España. Especializado en el desarrollo de aplicaciones web
+        únicas e interactivas.
+      </p>
+      <nav class="flex flex-wrap gap-4 mt-8">
+        <SocialPill href="https://www.linkedin.com/in/mikel-otavalo/">
+          <LinkedIn class="size-6" />LinkedIn
+        </SocialPill>
+        <SocialPill href="https://github.com/MikelAnderson">
+          <Github class="size-6" />GitHub
+        </SocialPill>
+        <SocialPill href="mailto:otavalomikel@gmail.com">
+          <Mail class="size-6" />Contáctame
+        </SocialPill>
+        <SocialPill href="/CV_MikelOtavalo_DesarrolladorWeb.pdf">
+          <Download class="size-6" />Descargar CV
+        </SocialPill>
+      </nav>
+    </div>
+    <img
+      width="200"
+      height="200"
+      src="/retrato.JPG"
+      alt="Mikel Otavalo"
+      class="hidden lg:block w-64 h-full rounded-full shadow-xl"
+      style="object-position: 50% 50%"
+    />
+  </div>
 </div>
