--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -83,12 +83,12 @@ const PROJECTS = [
     }
 ]
 ---
-        <div class="flex flex-col gap-y-16">
+<div class="flex flex-col gap-y-16">
 
 {
     PROJECTS.map(project =>(
-            <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
-                <div class="w-full md:w-1/2">
+            <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0 animate-fade-in-right timeline-view animate-range-entry">
+                <div class="w-full md:w-1/2" >
                     <div id="controls-carousel" class="relative w-full" data-carousel="static">
                         <!-- Carousel wrapper -->
                         <div class="relative h-64  overflow-hidden rounded-xl shadow-2xl border border-gray-300 dark:border-gray-700 ">
