--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -1,6 +1,6 @@
 ---
 const { class: className, id} = Astro.props
 ---
-<section id={id} data-section={id} class={`section scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl ${className}`}>
+<section id={id} data-section={id} class={`animate-blurred-fade-in animate-range-entry section scroll-m-20 w-full mx-auto container lg:max-w-5xl md:max-w-2xl ${className}`}>
     <slot/>
 </section>
