--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,14 @@
 ---
-import Header from '../components/Header.astro';
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-import Badge from '../components/Badge.astro';
-import LinkedIn from '../components/icons/LinkedIn.astro';
-import SocialPill from '../components/icons/SocialPill.astro';
-import Github from '../components/icons/Github.astro';
-import Mail from '../components/icons/Mail.astro'
-import Phone from '../components/icons/Phone.astro'
 import Experience from '../components/Experience.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 import Suitcase from '../components/icons/Suitcase.astro';
 import Code from '../components/icons/Code.astro';
 import Proyects from '../components/Proyects.astro';
 import AboutMeIcon from '../components/icons/AboutMeIcon.astro';
-import Download from '../components/icons/Download.astro';
 import TitleSection from '../components/TitleSection.astro';
 import Hero from '../components/Hero.astro';
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import AboutMe from '../components/AboutMe.astro';
 ---
 
 <Layout
@@ -26,43 +16,30 @@ import Hero from '../components/Hero.astro';
 	description="Desarrollador Web y Técnico de sistemas informáticos con un año de experiencia. De Granada, España. Especializado en crear aplicaciones web y posicionamiento web."
 	lang="es">
 	<main class="px-4">
-		<SectionContainer class="animate-blurred-fade-in duration-500 section h-[100vh] content-center scroll-m-20">
-			<Hero></Hero>
+			<Hero/>
+
+		<div class="space-y-34">
+		<SectionContainer id="experiencia" class="animate-fade-in-right timeline-view animate-range-entry">	
+				<TitleSection>
+					<Suitcase class="size-8"/>Experiencia laboral
+				</TitleSection>				
+				<Experience/>
 		</SectionContainer>
-			<div class="space-y-24">
-				<SectionContainer id="experiencia" class="animate-slide-in-bottom">
-					<TitleSection>
-						<Suitcase class="size-8"/>Experiencia laboral
-					</TitleSection>				
-					<Experience/>
-				</SectionContainer>
-				<SectionContainer id="proyectos" class="animate-fade-in ">
-					<TitleSection>
-						<Code class="size-7" />Proyectos
-					</TitleSection>
-					<Proyects/>
-				</SectionContainer>
-				<SectionContainer id="sobre-mi">
-					<TitleSection>
-						<AboutMeIcon class="size-8" />Sobre mí
-					</TitleSection>
-					<article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
-						<div class="[&>p]:mb-4 [&>p>strong]:text-blue-600 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"> 
-							<p>Me llamo Mikel, tengo 25 años y soy de Granada, España con padres de origen Ecuatoriano. Estudié <strong>Administración de Sistemas Informáticos en Red</strong> y 
-								luego me pasé al mundo de la programación estudiando un <strong>Grado Superior de Desarrollo de aplicaciones Web.</strong>Desde entonces disfruto mucho 
-								creando experiencias web para los usuarios.
-							</p>
-							<p>Entre mis éxitos en el grado destaco la <strong>creación de una tienda online desde cero</strong> usando un framework de PHP 
-								llamado <strong><em class="italic">Laravel</em></strong>. Además aprendí mucho sobre tecnologías modernas como React, Angular, Springboot, Tailwind, etc,
-								que me ayudaron a mejorar mis habilidades como desarrollador.
-							</p>
-							<p>Cuento en experiencia en el desarrollo de aplicaciones web, así como en la <strong>optimización</strong> y <strong>posicionamiento</strong> mediante el uso de <strong><em class="italic">CMS</em></strong>, ya 
-								que tengo conocimientos en <strong><em class="italic">SEO</em></strong> que me permiten ofrecer un servicio integral.
-							</p>
-						</div> 
-						<img width="200" height="200" src="/retrato.JPG" alt="Mikel Otavalo" class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
-					</article>
-				</SectionContainer>
-			</div>		
+
+		<SectionContainer id="proyectos" class="animate-fade-in-right timeline-view animate-range-entry">
+			<TitleSection>
+				<Code class="size-7" />Proyectos
+			</TitleSection>
+			<Proyects/>
+		</SectionContainer>
+
+		<SectionContainer id="sobre-mi">
+			<TitleSection>
+				<AboutMeIcon class="size-8" />Sobre mí
+			</TitleSection>
+			<AboutMe/>
+		</SectionContainer>
+		</div>
+
 	</main>
 </Layout>
