--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,9 +21,9 @@ const navItems = [
     url: "mailto:otavalomikel@gmail.com",
   },
 ]
-
 ---
-  <header class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2 animate-slide-in-top">
+
+  <header class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2">
     <nav class="flex px-3 text-sm font-medium shadow-lg backdrop-filter backdrop-blur-2xl bg-white/50 dark:bg-gray-800/0 border-gray-200 dark:border-gray-700 rounded-full text-gray-600 dark:text-gray-200 justify-center items-center ">
         {
         navItems.map((link) => (
@@ -85,21 +85,4 @@ const navItems = [
   })
 </script>
 
-<style>
-  nav {
-    animation: nav-shadown 1s linear both;
-    animation-timeline: scroll();
-    animation-range: 0 100%;
-  }
-
-  @keyframes nav-shadown {
-  0% {
-    dark:bg-gray-800/0;
-  }
-  to {
-    backdrop-filter: backdrop-blur-lg;
-  }
-}
-
-</style>
 
