--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,10 +8,10 @@ import Download from "./icons/Download.astro";
 ---
 
 <div
-  class="section h-[100dvh] content-center items-center scroll-m-20 w-full mx-auto container lg:max-w-5xl md:max-w-2xl animate-blurred-fade-in"
+  class="section h-[100dvh] content-center items-center scroll-m-20 w-full mx-auto container lg:max-w-5xl md:max-w-2xl"
 
 >
-  <div class="w-full flex flex-col md:flex-row justify-between items-center gap-4 animate-slide-in-top">
+  <div class="w-full flex flex-col md:flex-row justify-between items-center gap-4">
     <div class="gap-4 mb-4">
       <div class="flex gap-4 mb-4 lg:hidden">
     <img
@@ -19,7 +19,7 @@ import Download from "./icons/Download.astro";
       src="/retrato.JPG"
     />
     <a
-      href="https://linkedin.com/in/midudev"
+      href="https://linkedin.com/in/mikel-otavalo"
       target="_blank"
       rel="noopener"
       class="flex items-center transition md:justify-center md:hover:scale-105"
@@ -27,9 +27,9 @@ import Download from "./icons/Download.astro";
       <Badge>Disponible para trabajar</Badge>
     </a>
   </div>
-      <div class="w-full flex flex-row items-center gap-4">
+      <div class=" w-full flex flex-row items-center gap-4">
         <h1
-          class=" text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
+          class="split text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
         >
           Hola, Soy Mikel
         </h1>
@@ -46,7 +46,7 @@ import Download from "./icons/Download.astro";
       </div>
 
       <p
-        class=" text-pretty mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-blue-600 [&>strong]:font-semibold dark:text-gray-300"
+        class="split text-pretty mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-blue-600 [&>strong]:font-semibold dark:text-gray-300"
       >
         +1 año de experiencia. <strong
           >Desarrollador Web Junior y Técnico en sistemas informáticos en Red</strong
