--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,7 +24,7 @@ import Download from "./icons/Download.astro";
       rel="noopener"
       class="flex items-center transition md:justify-center md:hover:scale-105"
     >
-      <Badge>Disponible para trabajar</Badge>
+      <Badge class="badge">Disponible para trabajar</Badge>
     </a>
   </div>
       <div class=" w-full flex flex-row items-center gap-4">
@@ -40,7 +40,7 @@ import Download from "./icons/Download.astro";
             rel="noopener"
             class="flex items-center transition md:justify-center md:hover:scale-105"
           >
-            <Badge class="hidden lg:block">Disponible para trabajar</Badge>
+            <Badge class="bagde hidden lg:block">Disponible para trabajar</Badge>
           </a></span
         >
       </div>
@@ -55,7 +55,7 @@ import Download from "./icons/Download.astro";
       </p>
       <nav class="flex flex-wrap gap-4 mt-8">
         <SocialPill href="https://www.linkedin.com/in/mikel-otavalo/">
-          <LinkedIn class="size-6" />LinkedIn
+          <LinkedIn class=" size-6" />LinkedIn
         </SocialPill>
         <SocialPill href="https://github.com/MikelAnderson">
           <Github class="size-6" />GitHub
