Primera version completada del portfolio

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ import Download from "./icons/Download.astro";
       <div class="flex gap-4 mb-4 lg:hidden">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/retrato.JPG"
+      src="/MikelOtavalo-min.jpg"
     />
     <a
       href="https://linkedin.com/in/mikel-otavalo"
@@ -31,7 +31,7 @@ import Download from "./icons/Download.astro";
         <h1
           class="split text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
         >
-          Hola, Soy Mikel
+          Hola, Soy Mikel 👋
         </h1>
         <span
           ><a
@@ -48,12 +48,12 @@ import Download from "./icons/Download.astro";
       <p
         class="split text-pretty mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-blue-600 [&>strong]:font-semibold dark:text-gray-300"
       >
-        +1 año de experiencia. <strong
-          >Desarrollador Web Junior y Técnico en sistemas informáticos en Red</strong
-        > de Granada, España. Especializado en el desarrollo de aplicaciones web
-        únicas e interactivas.
+        <strong
+          >Desarrollador Web Junior</strong> y <strong>Administrador de sistemas informáticos</strong
+        > con experiencia. Especializado en el desarrollo de aplicaciones web
+        accesibles e intuitivas para todos los usuarios. Residente en Granada, España. 
       </p>
-      <nav class="flex flex-wrap gap-4 mt-8">
+      <nav class="social flex flex-wrap gap-4 mt-8">
         <SocialPill href="https://www.linkedin.com/in/mikel-otavalo/">
           <LinkedIn class=" size-6" />LinkedIn
         </SocialPill>
@@ -63,7 +63,7 @@ import Download from "./icons/Download.astro";
         <SocialPill href="mailto:otavalomikel@gmail.com">
           <Mail class="size-6" />Contáctame
         </SocialPill>
-        <SocialPill href="/CV_MikelOtavalo_DesarrolladorWeb.pdf">
+        <SocialPill href="/MikelOtavalo_CV_DesarrolladorWeb.pdf">
           <Download class="size-6" />Descargar CV
         </SocialPill>
       </nav>
@@ -71,9 +71,9 @@ import Download from "./icons/Download.astro";
     <img
       width="200"
       height="200"
-      src="/retrato.JPG"
+      src="/MikelOtavalo-min.jpg"
       alt="Mikel Otavalo"
-      class="hidden lg:block w-64 h-full rounded-full shadow-xl"
+      class="hidden lg:block order-1 object-cover w-64 p-1 md:order-2 lg:p-2 lg:w-64 rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 "
       style="object-position: 50% 50%"
     />
   </div>
