--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,9 +32,9 @@ import AboutMe from '../components/AboutMe.astro';
 			<Proyects/>
 		</SectionContainer>
 
-		<SectionContainer id="sobre-mi">
+		<SectionContainer id="sobre-mi" class="animate-fade-in-right timeline-view animate-range-entry">
 			<TitleSection>
-				<AboutMeIcon class="size-8" />Sobre mí
+				<AboutMeIcon class="size-7 " />Sobre mí
 			</TitleSection>
 			<AboutMe/>
 		</SectionContainer>
