--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,15 +6,22 @@ const EXPERIENCE = [
     {
         date: 'Noviembre 2023 - Junio 2024',
         title: 'Desarrollador Web',
-        company: 'Agencia Seoclic Murcia',
+        company: 'Agencia de Marketing Digital SEOCLIC, Murcia',
         description: 'Desarrollé aplicaciones web con Wordpress, Prestashop, HTML, CSS, JavaScript, Laravel y WP Emerge. Trabajé en equipo para crear soluciones web eficientes y optimizar componentes de frontend. Realicé pruebas y depuración de código para garantizar la calidad y el rendimiento. Contribuí a la documentación técnica y a la implementación de buenas prácticas. Mi equipo me reconoció por mi capacidad de aprendizaje y adaptación a nuevas tecnologías.',
         link: 'https://www.seoclic.com/'
     },
     {
+        date: 'Septiembre 2023 - Noviembre 2023',
+        title: 'Administrador de Sistemas',
+        company: 'GS Autobat Sede Central, Murcia',
+        description: 'Me encargue de la gestión de servidores, configuracion de redes, gestión de usuario y permisos, mantenimiento de hardware y software, y resolución de incidencias técnicas.  Aprendí a trabajar en equipo y a resolver problemas técnicos de manera eficiente. Me destaqué por mi capacidad de aprendizaje rápido y mi atención al detalle.',
+        link: 'https://www.gsautobat.com/'
+    },
+    {
         date: 'Abril 2022 - Junio 2022',
-        title: 'Técnico de Sistemas',
-        company: 'Viva Copier Granada',
-        description: 'Prácticas en las cuales realicé mantenimiento y configuración de equipos, gestión de redes y conectividad, soporte técnico, gestión de software, etc. ',
+        title: 'Administrador de Sistemas',
+        company: 'Viva Copier, Granada',
+        description: 'Realicé mantenimiento y configuración de equipos de impresión, gestión de redes y conectividad, soporte técnico, y gestión de software. Implementé soluciones para mejorar la eficiencia operativa y la satisfacción del cliente.',
         link: 'https://www.vivacopier.com/',
     }
 ]
